Fix incorrect shadow on mobile

--- a/style.css
+++ b/style.css
@@ -30,10 +30,17 @@ body {
 h1 {
   margin: 0;
   font-size: 100px;
+  font-weight: normal;
   font-family: titleFont;
   color: white;
   text-shadow: -1px 0 1px black, 0 1px 1px black, 1px 0 1px black, 0 -1px 1px black;
   text-decoration: underline;
+}
+
+@media (min-width: 300px) {
+  h1 {
+    font-size: 150px;
+  }
 }
 
 @media (min-width: 450px) {
